added more info

--- a/non_observables.ipynb
+++ b/non_observables.ipynb
@@ -10,7 +10,8 @@
     "## Synopsis\n",
     "There's model data that one would like to visualise for what no observational data is available.\n",
     "In this case pyaerocom can be used to inter compare several models with each other by analysing\n",
-    "the model data \n",
+    "just the model data:\n",
+    "\n",
     "1. at station locations given by an observational network\n",
     "2. using one model as comparison and doing the inter comparison grid cell by grid cell\n",
     "\n",
@@ -22,7 +23,9 @@
     "\n",
     "\n",
     "Creating so-called proxy data at station locations (#1) needs adjustment of pyaerocom unless the variables have been defined already.\n",
-    "The easiest way of showing non-observable data in an aeroval experiment is therefore using some sort of model data for comparison.\n",
+    "A list of supported variables and observational networks can be found at the end of this page.\n",
+    "\n",
+    "Another way of showing non-observable data in an aeroval experiment is therefore using some sort of model data for comparison.\n",
     "As long as the data can be read by pyaerocom, it can be used as proxy data for non-observable variables.\n",
     "\n",
     "## aeroval configuration\n",
@@ -61,7 +64,57 @@
     "**WARNING**\n",
     "As of the beginning of the year 2025 the model data used **needs** to be interpolated to at least 2 degree (for non-global coverage) or 5 degrees (global coverage).\n",
     "Using a higher resolution will end in too many \"stations\" for the web interface to handle and will take very long to compute.\n",
-    "\n"
+    "\n",
+    "## supported variables at obs network locations:\n",
+    "\n",
+    "| variable         | obsnetwork(s) that provide them |\n",
+    "|------------------|---------------------------------|\n",
+    "| proxydryhno3     | EBAS                            |\n",
+    "| proxydryhono     | EBAS                            |\n",
+    "| proxydryn2o5     | EBAS                            |\n",
+    "| proxydryna       | EBAS                            |\n",
+    "| proxydrynh3      | EBAS                            |\n",
+    "| proxydrynh4      | EBAS                            |\n",
+    "| proxydryno2      | EBAS                            |\n",
+    "| proxydryno2no2   | EBAS                            |\n",
+    "| proxydryno3c     | EBAS                            |\n",
+    "| proxydryno3f     | EBAS                            |\n",
+    "| proxydryo3       | EBAS                            |\n",
+    "| proxydryoxn      | EBAS                            |\n",
+    "| proxydryoxs      | EBAS                            |\n",
+    "| proxydrypm10     | EBAS                            |\n",
+    "| proxydrypm25     | EBAS                            |\n",
+    "| proxydryrdn      | EBAS                            |\n",
+    "| proxydryso2      | EBAS                            |\n",
+    "| proxydryso4      | EBAS                            |\n",
+    "| proxydryss       | EBAS                            |\n",
+    "| proxyod550aerh2o | Aeronet                         |\n",
+    "| proxyod550bc     | Aeronet                         |\n",
+    "| proxyod550dust   | Aeronet                         |\n",
+    "| proxyod550nh4    | Aeronet                         |\n",
+    "| proxyod550no3    | Aeronet                         |\n",
+    "| proxyod550oa     | Aeronet                         |\n",
+    "| proxyod550so4    | Aeronet                         |\n",
+    "| proxyod550ss     | Aeronet                         |\n",
+    "| proxywethno3     | EBAS                            |\n",
+    "| proxywethono     | EBAS                            |\n",
+    "| proxywetn2o5     | EBAS                            |\n",
+    "| proxywetnh3      | EBAS                            |\n",
+    "| proxywetnh4      | EBAS                            |\n",
+    "| proxywetno2      | EBAS                            |\n",
+    "| proxywetno2no2   | EBAS                            |\n",
+    "| proxywetno3c     | EBAS                            |\n",
+    "| proxywetno3f     | EBAS                            |\n",
+    "| proxyweto3       | EBAS                            |\n",
+    "| proxywetoxn      | EBAS                            |\n",
+    "| proxywetoxs      | EBAS                            |\n",
+    "| proxywetpm10     | EBAS                            |\n",
+    "| proxywetpm25     | EBAS                            |\n",
+    "| proxywetrdn      | EBAS                            |\n",
+    "| proxywetso2      | EBAS                            |\n",
+    "| proxywetso4      | EBAS                            |\n",
+    "| proxyzaerosol    | Aeronet                         |\n",
+    "| proxyzdust       | Aeronet                         |\n"
    ]
   },
   {
