Working tutorial, but only with too large tutorial data

--- a/evaluations/bulk_variables.ipynb
+++ b/evaluations/bulk_variables.ipynb
@@ -29,7 +29,32 @@
    "source": [
     "## Setting Up the Evaluation\n",
     "\n",
-    "Telling PyAeroval to use bulk variables are not difficult. We start by setting up a normal EMEP model evaluation"
+    "Telling PyAeroval to use bulk variables are not difficult. First we have to download some test data we can use. If you haven't done so in another tutorial, run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading file 'testdata-minimal.tar.gz.20241120' from 'https://pyaerocom.met.no/pyaerocom-suppl/testdata-minimal.tar.gz.20241120' to '/home/danielh/MyPyaerocom'.\n",
+      "Extracting 'testdata-minimal' from '/home/danielh/MyPyaerocom/testdata-minimal.tar.gz.20241120' to '/lustre/storeB/project/fou/kl/emep/People/danielh/projects/pyaerocom/pyaerocom-tutorials/data'\n"
+     ]
+    }
+   ],
+   "source": [
+    "!  pya getsampledata --extract-dir ../data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We start making the config by setting up a normal EMEP model evaluation"
    ]
   },
   {
@@ -111,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_EMEP = \"../data/testdata-minimal/modeldata/EMEP_2017/\"\n",
+    "folder_EMEP = \"../../data/testdata-minimal/modeldata/EMEP_PM\"\n",
     "\n",
     "EMEP = dict(\n",
     "        model_id=\"EMEP\",\n",
@@ -166,6 +191,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pyaerocom.io import PyaroConfig\n",
+    "\n",
+    "\n",
     "data_id = \"nilupmfebas\"\n",
     "url = \"../../data/testdata-minimal/obsdata/EBASTutorialData\"\n",
     "\n",
@@ -176,19 +204,20 @@
     "    filters={\n",
     "        \"variables\": {\n",
     "            \"include\": [\n",
-    "                \"pm10_mass\",\n",
-    "                \"pm25_mass\",\n",
+    "                \"pm10#pm10_mass#ug m-3\",\n",
+    "                \"pm25#pm25_mass#ug m-3\",\n",
     "            ]\n",
     "        }\n",
     "    },\n",
     "    name_map={\n",
-    "        \"pm10_mass\": \"concpm10\",\n",
-    "        \"pm25_mass\": \"concpm25\",\n",
+    "        \"pm25#pm25_mass#ug m-3\": \"concpm25\",\n",
+    "        \"pm10#pm10_mass#ug m-3\": \"concpm10\",\n",
     "    },\n",
     ")\n",
     "\n",
     "EBAS= dict(\n",
-    "            obs_id=\"EBASMC\",\n",
+    "            obs_id=config.name,\n",
+    "            pyaro_config=config,\n",
     "            web_interface_name=\"EBAS-m\",\n",
     "            obs_vars=[\n",
     "                \"fraction\"\n",
@@ -245,8 +274,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "-1.-1.-1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
