Minor changes to colocateddata tutorial

--- a/making_a_colocated_data_object_with_pyaerocom.ipynb
+++ b/making_a_colocated_data_object_with_pyaerocom.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +58,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's say we have done the collocation and stored the results in some object. As an example we will assume this is a netcdf file called `my_colocated_data.nc`. For simplcity of the tutorial, such a colocated data object file is included with pyaerocom. In fact there are a few, however there is a `my_colocated_data.nc` specifically included for this tutorial. Pyaerocom has a command line interface which is usefule for this. On the command line there are several functions available.\n",
+    "Let's say we have done the collocation and stored the results in some object. As an example we will assume this is a netcdf file called `my_colocated_data.nc`. For simplicity of the tutorial, such a colocated data object file is included with pyaerocom. In fact there are a few, however there is a `my_colocated_data.nc` specifically included for this tutorial. Pyaerocom has a command line interface which is useful for this. On the command line there are several functions available.\n",
     "\n",
     "Our goal is to create a `ColocatedData` object named `od550aer_od550aer_MOD-IFS-OSUITE_REF-AeronetL1.5-d_20130101_20221231_daily_ALL-wMOUNTAINS.nc`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -85,14 +85,14 @@
       "\u001b[2m│\u001b[0m \u001b[1;36m-\u001b[0m\u001b[1;36m-help\u001b[0m                          Show this message and exit.                  \u001b[2m│\u001b[0m\n",
       "\u001b[2m╰──────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
       "\u001b[2m╭─\u001b[0m\u001b[2m Commands \u001b[0m\u001b[2m──────────────────────────────────────────────────────────────────\u001b[0m\u001b[2m─╮\u001b[0m\n",
-      "\u001b[2m│\u001b[0m \u001b[1;36maeroval       \u001b[0m\u001b[1;36m \u001b[0m Run an AeroVal experiment as described in a json config file \u001b[2m│\u001b[0m\n",
       "\u001b[2m│\u001b[0m \u001b[1;36mbrowse        \u001b[0m\u001b[1;36m \u001b[0m Browse database (e.g., browse \u001b[1;33m<DATABASE>\u001b[0m)                    \u001b[2m│\u001b[0m\n",
       "\u001b[2m│\u001b[0m \u001b[1;36mclearcache    \u001b[0m\u001b[1;36m \u001b[0m Delete cached data objects                                   \u001b[2m│\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36mlistcache     \u001b[0m\u001b[1;36m \u001b[0m List cached data objects                                     \u001b[2m│\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36mppiaccess     \u001b[0m\u001b[1;36m \u001b[0m Check if MET Norway's PPI can be accessed                    \u001b[2m│\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36maeroval       \u001b[0m\u001b[1;36m \u001b[0m Run an AeroVal experiment as described in a json config file \u001b[2m│\u001b[0m\n",
       "\u001b[2m│\u001b[0m \u001b[1;36mgetsampledata \u001b[0m\u001b[1;36m \u001b[0m Downloads a minimal sample dataset.                          \u001b[2m│\u001b[0m\n",
       "\u001b[2m│\u001b[0m \u001b[1;36minit          \u001b[0m\u001b[1;36m \u001b[0m init ~/MyPyaerocom directory and copy the default paths.ini  \u001b[2m│\u001b[0m\n",
       "\u001b[2m│\u001b[0m \u001b[1;36m               \u001b[0m there                                                        \u001b[2m│\u001b[0m\n",
-      "\u001b[2m│\u001b[0m \u001b[1;36mlistcache     \u001b[0m\u001b[1;36m \u001b[0m List cached data objects                                     \u001b[2m│\u001b[0m\n",
-      "\u001b[2m│\u001b[0m \u001b[1;36mppiaccess     \u001b[0m\u001b[1;36m \u001b[0m Check if MET Norway's PPI can be accessed                    \u001b[2m│\u001b[0m\n",
       "\u001b[2m╰──────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
       "\n"
      ]
@@ -106,19 +106,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ensure that pya/pyaerocom is at least version 0.25"
+    "Ensure that pya/pyaerocom is at least version 0.28.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🦄 pyaerocom 0.25.0.dev0\n"
+      "🦄 pyaerocom 0.28.dev0\n"
      ]
     }
    ],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -246,12 +246,12 @@
        " 'ts_type': FieldInfo(annotation=str, required=True),\n",
        " 'start': FieldInfo(annotation=Union[Timestamp, int, str, NoneType], required=True),\n",
        " 'stop': FieldInfo(annotation=Union[Timestamp, int, str, NoneType], required=True),\n",
-       " 'obs_config': FieldInfo(annotation=Union[PyaroConfig, NoneType], required=False, default=None),\n",
+       " 'pyaro_config': FieldInfo(annotation=Union[PyaroConfig, NoneType], required=False, default=None),\n",
        " 'OBS_VERT_TYPES_ALT': FieldInfo(annotation=dict[str, str], required=False, default={'Surface': 'ModelLevel', '2D': '2D'}),\n",
        " 'CRASH_ON_INVALID': FieldInfo(annotation=bool, required=False, default=False),\n",
        " 'FORBIDDEN_KEYS': FieldInfo(annotation=list[str], required=False, default=['var_outlier_ranges', 'var_ref_outlier_ranges', 'remove_outliers']),\n",
        " 'filter_name': FieldInfo(annotation=str, required=False, default='ALL-wMOUNTAINS'),\n",
-       " 'basedir_coldata': FieldInfo(annotation=Union[str, Path], required=False, default='/home/heikok/MyPyaerocom/colocated_data', validate_default=True),\n",
+       " 'basedir_coldata': FieldInfo(annotation=Union[str, Path], required=False, default='/home/thlun8736/MyPyaerocom/colocated_data', validate_default=True),\n",
        " 'save_coldata': FieldInfo(annotation=bool, required=False, default=False),\n",
        " 'obs_name': FieldInfo(annotation=Union[str, NoneType], required=False, default=None),\n",
        " 'obs_data_dir': FieldInfo(annotation=Union[Path, str, NoneType], required=False, default=None),\n",
@@ -294,7 +294,7 @@
        " 'freqs': FieldInfo(annotation=list[str], required=False, default=['monthly', 'yearly'])}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "{'data': FieldInfo(annotation=Union[Path, str, DataArray, ndarray, NoneType], required=False, default=None)}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "(2, 365, 665)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,6 +455,8 @@
     "    \"vert_code\": \"Column\", # Literal[\"Column\", \"Profile\", \"Surface\", \"ModelLevel\"]. default is \"Surface\"\n",
     "    \"diurnal_only\": 0, # default is 0\n",
     "    \"zeros_to_nan\": 1, # default is 0\n",
+    "    \"data_source\": [\"AeronetL1.5-d\", \"ECMWF_OSUITE\"],\n",
+    "    \"var_name\": [\"od550aer\", \"od550aer\"]\n",
     "}\n"
    ]
   },
@@ -468,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,9 +487,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'obs_vars': 'od550aer',\n",
+       " 'ts_type': 'daily',\n",
+       " 'filter_name': 'ALL-wMOUNTAINS',\n",
+       " 'ts_type_src': ['hourly', 'hourly'],\n",
+       " 'var_units': ['1', '1'],\n",
+       " 'data_level': 3,\n",
+       " 'revision_ref': '20221027',\n",
+       " 'from_files': ['ECMWF_OSUITE.daily.od550aer.2013.nc',\n",
+       "  'ECMWF_OSUITE.daily.od550aer.2014.nc',\n",
+       "  'ECMWF_OSUITE.daily.od550aer.2015.nc',\n",
+       "  'ECMWF_OSUITE.daily.od550aer.2016.nc',\n",
+       "  'ECMWF_OSUITE.daily.od550aer.2017.nc',\n",
+       "  'ECMWF_OSUITE.daily.od550aer.2018.nc',\n",
+       "  'ECMWF_OSUITE.daily.od550aer.2019.nc',\n",
+       "  'ECMWF_OSUITE.daily.od550aer.2020.nc',\n",
+       "  'ECMWF_OSUITE.daily.od550aer.2021.nc',\n",
+       "  'ECMWF_OSUITE.daily.od550aer.2022.nc'],\n",
+       " 'from_files_ref': 'None',\n",
+       " 'colocate_time': 0,\n",
+       " 'obs_is_clim': 0,\n",
+       " 'pyaerocom': '0.28.dev0',\n",
+       " 'CONV!min_num_obs': \"{'monthly': {'daily': 3}}\",\n",
+       " 'resample_how': 'mean',\n",
+       " 'obs_name': 'AeronetL1.5-d',\n",
+       " 'vert_code': 'Column',\n",
+       " 'diurnal_only': 0,\n",
+       " 'zeros_to_nan': 1,\n",
+       " 'data_source': ['AeronetL1.5-d', 'ECMWF_OSUITE'],\n",
+       " 'var_name': ['od550aer', 'od550aer']}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "da = xr.DataArray(\n",
     "    data = arr,\n",
@@ -495,7 +536,8 @@
     "    coords = coords,\n",
     "    attrs = metadata\n",
     ")\n",
-    "da.name = \"od550aer\" # Important to give the DataArray the name of the variable."
+    "da.name = \"od550aer\" # Important to give the DataArray the name of the variable.\n",
+    "da.attrs"
    ]
   },
   {
@@ -508,11 +550,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "coldata = ColocatedData(da)"
+    "from pyaerocom.colocation.colocated_data import validate_structure\n",
+    "coldata = ColocatedData(da)\n",
+    "validate_structure(coldata.data)"
    ]
   },
   {
@@ -520,7 +564,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Under the hood Pyaerocom has checked that we have the correct dimensions on this object."
+    "Under the hood Pyaerocom has checked that we have the correct dimensions on this object. In addition we here use validate_structure which does additional checks for validity on the colocated data object which aren't currently being applied by default. It will detect the following issues:\n",
+    "\n",
+    "- Wrong name or count of dimensions (Should be {\"data_source\", \"time\", \"station_name\"} or {\"data_source\", \"time\", \"latitude\", \"longitude\"}).\n",
+    "- Wrong names of latitude and longitude coords (Should be {\"latitude\", \"longitude\"}.\n",
+    "- Missing required metadata keys (see section about required metadata above).\n",
+    "- Duplicate station names (Station names should be unique, with one entry per station).\n",
+    "- That the variable name is recognized by pyaerocom (See https://github.com/metno/pyaerocom/blob/main-dev/pyaerocom/data/variables.ini for all supported variable names).\n",
+    "\n",
+    "Passing these checks gives some additional confidence that the colocated data object will be understood by pyaerocom."
    ]
   },
   {
@@ -535,38 +587,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can save this ColocatedData object."
+    "We can save this ColocatedData object. The filename will be automatically determined using the metadata configured above:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "savename = \"od550aer_od550aer_MOD-IFS-OSUITE_REF-AeronetL1.5-d_20130101_20221231_daily_ALL-wMOUNTAINS.nc\"\n",
     "out_dir = \"./data/coldata/\"\n",
     "os.makedirs(out_dir, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'./data/coldata/od550aer_od550aer_MOD-IFS-OSUITE_REF-AeronetL1.5-d_20130101_20221231_daily_ALL-wMOUNTAINS.nc'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/coldata/od550aer_od550aer_MOD-IFS-OSUITE_REF-AeronetL1.5-d_20130101_20221231_daily_ALL-wMOUNTAINS.nc\n"
+     ]
     }
    ],
    "source": [
-    "coldata.to_netcdf(out_dir=out_dir, savename=savename)"
+    "print(coldata.to_netcdf(out_dir=out_dir, savename=savename))"
    ]
   },
   {
@@ -634,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -671,13 +719,15 @@
       "\t\tod550aer:from_files_ref = \"None\" ;\n",
       "\t\tod550aer:colocate_time = 0LL ;\n",
       "\t\tod550aer:obs_is_clim = 0LL ;\n",
-      "\t\tod550aer:pyaerocom = \"0.25.0.dev0\" ;\n",
+      "\t\tod550aer:pyaerocom = \"0.28.dev0\" ;\n",
       "\t\tod550aer:CONV\\!min_num_obs = \"{\\'monthly\\': {\\'daily\\': 3}}\" ;\n",
       "\t\tod550aer:resample_how = \"mean\" ;\n",
       "\t\tod550aer:obs_name = \"AeronetL1.5-d\" ;\n",
       "\t\tod550aer:vert_code = \"Column\" ;\n",
       "\t\tod550aer:diurnal_only = 0LL ;\n",
       "\t\tod550aer:zeros_to_nan = 1LL ;\n",
+      "\t\tstring od550aer:data_source = \"AeronetL1.5-d\", \"ECMWF_OSUITE\" ;\n",
+      "\t\tstring od550aer:var_name = \"od550aer\", \"od550aer\" ;\n",
       "\t\tod550aer:coordinates = \"altitude latitude longitude\" ;\n",
       "}\n"
      ]
@@ -690,7 +740,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -705,9 +755,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.12"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
